--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ header > img {
 
 .mymenu{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
     width: 90%;
     column-gap: 10px;
     margin: auto;
@@ -76,7 +76,7 @@ button:hover{
     border-color: black;
     border-width: 2px;
     margin:auto;
-    height: 750px;
+    height: 1000px;
     justify-content: center;
 }
 
@@ -97,7 +97,7 @@ button:hover{
     align-content: space-around;
 }
 
-.contactpage, .questionpage{
+.contactpage, .questionpage, .visitorForm{
     display:none; /*Turns off the display of both the contact and question part of the page*/
 }
 
@@ -129,6 +129,49 @@ button:hover{
     top: 3%;
     padding: 20px;
     width: 8%;
+}
+
+input{
+    height: 32px;
+}
+
+.visitorForm{
+    flex-direction: column;
+    gap: 5px;
+}
+
+.visitorForm > h2{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#submitBtn{
+    margin-top: 20px;
+    /*position: absolute;
+    bottom: 10px;*/
+}
+
+#errorMessage{
+    display: none;
+    color: #cc0000;
+}
+
+.wrongInput{
+    display: none;
+    color: #cc0000;
+}
+
+#defaultSelect{
+    color: grey;
+}
+
+#commentBox{
+    height: 70px;
+}
+
+#thankYou{
+    display: none;
+    margin: auto;
 }
 
 /*I made the max-width these specific px because that was where exactly it was messing with my header*/
